@@ -409,3 +409,6 @@
 2018-06-25 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 11:0:0.
 	* Incremented the package version to 1.8.0.
+2018-06-26 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug that caused disablement of an ethernet port
+	to not be persistent across reboots.
